# php-ocr

./: Cargo.toml  README.md
examples/: basic_ocr.php
src/: lib.rs
